--- a/IOS-combine/Modules/Calling/Xib/GroupCallingUpdatedView.xib
+++ b/IOS-combine/Modules/Calling/Xib/GroupCallingUpdatedView.xib
@@ -28,7 +28,7 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="I87-8m-hme">
-                    <rect key="frame" x="182" y="182" width="50" height="100"/>
+                    <rect key="frame" x="182" y="182" width="50" height="50"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYW-Rj-WvQ">
                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -36,14 +36,14 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbY-1U-KrD">
-                            <rect key="frame" x="0.0" y="50" width="50" height="50"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                     </subviews>
                 </stackView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbY-1U-KrD">
+                    <rect key="frame" x="207" y="252" width="0.0" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Uwm-xl-oEZ">
                     <rect key="frame" x="8" y="132" width="398" height="100"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -148,6 +148,7 @@
                 <constraint firstItem="J2H-9O-12D" firstAttribute="leading" secondItem="elf-R6-Eg3" secondAttribute="trailing" constant="12" id="AmR-NN-cDA"/>
                 <constraint firstItem="I87-8m-hme" firstAttribute="top" secondItem="Uwm-xl-oEZ" secondAttribute="bottom" constant="-50" id="BiV-7l-HhH"/>
                 <constraint firstItem="pWP-b5-vES" firstAttribute="centerX" secondItem="Uwm-xl-oEZ" secondAttribute="centerX" id="E6J-Rq-rC8"/>
+                <constraint firstItem="HbY-1U-KrD" firstAttribute="centerX" secondItem="I87-8m-hme" secondAttribute="centerX" id="JpG-wl-Zz7"/>
                 <constraint firstItem="atO-nL-8Pe" firstAttribute="top" secondItem="Uwm-xl-oEZ" secondAttribute="bottom" constant="-30" id="KUx-M6-sMc"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="foV-TZ-2vw" secondAttribute="bottom" constant="20" id="Mg0-1E-z3C"/>
                 <constraint firstItem="I87-8m-hme" firstAttribute="centerX" secondItem="Uwm-xl-oEZ" secondAttribute="centerX" id="Mwb-kn-lTP"/>
@@ -159,6 +160,7 @@
                 <constraint firstItem="elf-R6-Eg3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="dDX-a5-IAb"/>
                 <constraint firstItem="atO-nL-8Pe" firstAttribute="trailing" secondItem="Uwm-xl-oEZ" secondAttribute="trailing" constant="-24" id="grP-iU-EvX"/>
                 <constraint firstItem="Grk-4v-CLc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="qgo-xf-Rpm"/>
+                <constraint firstItem="HbY-1U-KrD" firstAttribute="top" secondItem="I87-8m-hme" secondAttribute="bottom" constant="20" id="ugW-d6-NRs"/>
                 <constraint firstItem="elf-R6-Eg3" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="23" id="zfN-nI-HIE"/>
             </constraints>
             <connections>
