--- a/IOS-combine/Modules/Channel/Cell/ChannelCell.xib
+++ b/IOS-combine/Modules/Channel/Cell/ChannelCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -67,7 +68,7 @@
                     <constraint firstItem="Vrv-xT-0dE" firstAttribute="top" secondItem="zJc-BL-2p2" secondAttribute="top" constant="12" id="Rco-Dd-RyI"/>
                     <constraint firstItem="KHH-pm-cPS" firstAttribute="leading" secondItem="Zbp-FG-EiQ" secondAttribute="leading" id="SdN-wv-g7x"/>
                     <constraint firstItem="Zbp-FG-EiQ" firstAttribute="leading" secondItem="Vrv-xT-0dE" secondAttribute="trailing" constant="8" id="TAR-IA-wdS"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="JrR-Ta-3Ud" secondAttribute="bottom" priority="250" constant="20" id="Trm-7w-60E"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="JrR-Ta-3Ud" secondAttribute="bottom" priority="250" id="Trm-7w-60E"/>
                     <constraint firstItem="JrR-Ta-3Ud" firstAttribute="centerX" secondItem="zJc-BL-2p2" secondAttribute="centerX" id="V4j-k5-jT5"/>
                     <constraint firstItem="KHH-pm-cPS" firstAttribute="top" secondItem="Zbp-FG-EiQ" secondAttribute="top" id="YxK-D6-CAW"/>
                     <constraint firstItem="SqX-cE-duZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="huF-hX-8BS" secondAttribute="trailing" constant="8" id="dOi-xk-sWo"/>
