--- a/IOS-combine/Modules/Calling/Xib/BroadcastView.xib
+++ b/IOS-combine/Modules/Calling/Xib/BroadcastView.xib
@@ -123,7 +123,7 @@
                                 <constraint firstAttribute="height" constant="24" id="0ce-Df-deE"/>
                                 <constraint firstAttribute="width" constant="24" id="QBb-Lf-rcM"/>
                             </constraints>
-                            <state key="normal" image="audioRoute"/>
+                            <state key="normal" image="Audio"/>
                             <connections>
                                 <action selector="didTapRoute:" destination="iN0-l3-epB" eventType="touchUpInside" id="Lcq-M5-zIc"/>
                             </connections>
@@ -236,13 +236,13 @@
         </view>
     </objects>
     <resources>
+        <image name="Audio" width="64" height="76"/>
         <image name="User" width="24" height="24"/>
         <image name="Volume Off" width="32" height="32"/>
         <image name="Volumn On" width="32" height="32"/>
         <image name="appaudio" width="51" height="46"/>
         <image name="appaudioon" width="51" height="46"/>
         <image name="arrow-left" width="24.5" height="27"/>
-        <image name="audioRoute" width="512" height="512"/>
         <image name="broadcast" width="87" height="109"/>
         <image name="end" width="60" height="60"/>
         <image name="mute" width="60" height="60"/>
